fixes large cta on small screens

--- a/develop/scss/_scaffolding.scss
+++ b/develop/scss/_scaffolding.scss
@@ -47,7 +47,7 @@
             text-align: center;
 
             a {
-                padding: 10px 15px 8px 15px;
+                padding: 10px 0 8px 0;
                 display: block;
                 i {
                     position: static;
